# chat

./: .env.example  .gitignore  .gitignore_global  Cargo.toml  README.md  chat.mermaid  sqlx.toml
.github/workflows/: rust.yml
chaty-integration-test/chaty-integration-test/: .gitignore  package-lock.json  package.json
chaty-integration-test/chaty-integration-test/commons/: constant.js
chaty-integration-test/chaty-integration-test/tests/: login.spec.js  register.spec.js
commons/: Cargo.toml
commons/src/: errors.rs  generic_errors.rs  lib.rs
crate/application/web/: Cargo.toml
crate/application/web/assets/: index.html
crate/application/web/assets/js/: main.js
crate/application/web/page/: 500.html  chat.html  login.html  profile.html  signup.html
crate/application/web/page/callback/: activate.html
crate/application/web/page/fragments/: layout.html  modal_confirm.html
crate/application/web/page/htmx/: chat_form_box.html  chat_header.html  chat_window.html  chat_window_empty.html  message_box.html  signup_error.html  signup_success.html  success_update_profile.html  user_info.html
crate/application/web/src/: htmx_handler.rs  main.rs  page_handler.rs
crate/application/web/src/commons/: constants.rs  mod.rs  response_builder.rs  templates.rs
crate/application/web/src/debug_handlers/: mod.rs
crate/application/web/src/htmx_handlers/: chat.rs  login.rs  mod.rs  register.rs  user_detail.rs
crate/application/web/src/middlewares/: auth.rs
crate/application/web/src/page_handlers/: mod.rs
crate/application/web/src/utils/: mod.rs
crate/application/web/static/page/: login.html
crate/libs/clients/crypto/: Cargo.toml
crate/libs/clients/crypto/src/: lib.rs
crate/libs/clients/jwt/: Cargo.toml
crate/libs/clients/jwt/src/: lib.rs
crate/libs/clients/mail/: Cargo.toml
crate/libs/clients/mail/src/: lib.rs
crate/libs/commons/: Cargo.toml
crate/libs/commons/src/: generic_errors.rs  lib.rs
crate/libs/credentials/: Cargo.toml
crate/libs/credentials/src/: credential_services.rs  lib.rs
crate/libs/domain/chats/: Cargo.toml
crate/libs/domain/chats/src/: chat.rs  chat_services.rs  entity.rs  lib.rs
crate/libs/domain/credentials/: Cargo.toml
crate/libs/domain/credentials/src/: credential.rs  credential_services.rs  lib.rs
crate/libs/domain/sessions/: Cargo.toml
crate/libs/domain/sessions/src/: entity.rs  lib.rs  services.rs
crate/libs/domain/user_details/: Cargo.toml
crate/libs/domain/user_details/src/: entity.rs  lib.rs  user_detail_service.rs
crate/libs/domain/users/: Cargo.toml
crate/libs/domain/users/src/: lib.rs  user.rs  user_services.rs
crate/libs/fakers/: Cargo.toml
crate/libs/fakers/src/: lib.rs
crate/libs/persistence/: Cargo.toml
crate/libs/persistence/src/: lib.rs
crate/libs/persistence/src/db/: database.rs  mod.rs  sqlite.rs
crate/libs/persistence/src/env/: mod.rs  myenv.rs
crate/libs/usecases/: Cargo.toml
crate/libs/usecases/src/: chat_usecase.rs  invite_private_chat_usecase.rs  lib.rs  login_usecase.rs  macros.rs  register_usecase.rs  userdetail_usecase.rs  utils.rs
crate/libs/usecases/tests/: credential_test.rs  invite_private_chat_usecase_test.rs  login_usecase_test.rs  register_usecase_test.rs  user_test.rs
crate/libs/users/: Cargo.toml
crate/libs/users/src/: user.rs  user_services.rs
crate/tests/: Cargo.toml
crate/tests/src/: credential_test.rs  lib.rs  login_usecase_test.rs  register_usecase_test.rs  usecase_test.rs  user_test.rs  utils.rs
credentials/src/: credential.rs  credential_services.rs
migrations/: 20241217200329_create_users_table.down.sql  20241217200329_create_users_table.up.sql  20241218194411_create_credentials_table.down.sql  20241218194411_create_credentials_table.up.sql  20241231225429_create_chats_and_friends_table.down.sql  20241231225429_create_chats_and_friends_table.up.sql  20250202140547_create_session_table.down.sql  20250202140547_create_session_table.up.sql  20250205164038_create_userdetail.down.sql  20250205164038_create_userdetail.up.sql
persistence/: Cargo.toml
persistence/src/: lib.rs
persistence/src/db/: database.rs  mod.rs
persistence/src/env/: env.rs
tests/: Cargo.toml
tests/src/: credential_test.rs  lib.rs  usecase_test.rs  user_test.rs  utils.rs
usecases/: Cargo.toml
usecases/src/: register_usecase.rs
user_service/src/models/: user.rs
users/: Cargo.toml
users/src/: lib.rs  main.rs  user_services.rs
users/src/models/: user.rs
users/src/services/: mod.rs  user_services.rs
