[workspace]
resolver = "2"
members = [
    "crate/libs/commons",
    "crate/libs/credentials",
    "crate/libs/persistence",
    "crate/libs/users",
    "crate/libs/usecases",
    "crate/tests",
    "crate/libs/clients/mail"
]


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower = { version = "0.5.1" }
serde_json = "1.0"
hyper = { version = "1.5.2" }
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["sqlite", "sqlite", "sqlx-sqlite", "runtime-tokio", "tls-native-tls", "runtime-tokio-native-tls", "chrono"] }
anyhow = { version = "1.0.94" }
derive_more = { version = "1.0.0-beta", features = ["from", "display", "error"] }
async-trait = { version = "0.1.83" }
thiserror = "2.0.8"
serde = { version = "1.0.216", features = ["derive"] }

