[workspace]
resolver = "2"
members = [
    "crate/libs/commons",
    "crate/libs/domain/credentials",
    "crate/libs/persistence",
    "crate/libs/domain/users",
    "crate/libs/usecases",
    "crate/tests",
    "crate/libs/clients/mail",
    "crate/libs/clients/crypto"
]


[workspace.dependencies]
shaku = { version = "0.6.2" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["sqlite", "sqlite", "sqlx-sqlite", "runtime-tokio", "tls-native-tls", "runtime-tokio-native-tls", "chrono"] }
anyhow = { version = "1.0.94" }
derive_more = { version = "1.0.0-beta", features = ["from", "display", "error"] }
async-trait = { version = "0.1.83" }
thiserror = "2.0.8"
serde = { version = "1.0.216", features = ["derive"] }

