[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
sqlx.workspace = true
dotenv.workspace = true
shaku.workspace = true
pretty_env_logger.workspace = true
log.workspace = true
futures = "0.3.31"

persistence = { path = "../libs/persistence" }
users = { path = "../libs/domain/users" }
credentials = { path = "../libs/domain/credentials" }
usecases = { path = "../libs/usecases" }
commons = { path = "../libs/commons" }
mail = { path = "../libs/clients/mail" }
crypto = { path = "../libs/clients/crypto" }
jwt = { path = "../libs/clients/jwt" }
