[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
shaku.workspace = true
anyhow.workspace = true

axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }

tower-http = { version = "0.6.1", features = ["trace", "fs", "add-extension"] }

usecases = { path = "../../libs/usecases" }
persistence = { path = "../../libs/persistence" }
users = { path = "../../libs/domain/users" }
credentials = { path = "../../libs/domain/credentials" }
chats = { path = "../../libs/domain/chats" }
commons = { path = "../../libs/commons" }
mail = { path = "../../libs/clients/mail" }
crypto = { path = "../../libs/clients/crypto" }
jwt = { path = "../../libs/clients/jwt" }
log = "0.4.22"
http = "1.2.0"
