[package]
name = "usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
sqlx.workspace = true
async-trait.workspace = true
shaku.workspace = true

persistence = { path = "../persistence" }
users = { path = "../domain/users" }
credentials = { path = "../domain/credentials" }
commons = { path = "../commons" }
mail = { path = "../clients/mail" }
crypto = { path = "../clients/crypto" }
