[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = { version = "0.16.0" }
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
sqlx.workspace = true
persistence = {path = "../persistence"}
