[package]
name = "chats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
shaku.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

persistence = { path = "../../persistence" }
